수강편람 업데이트(2012-2)

--- a/data/htm/2012_2_basics_korean.htm
+++ b/data/htm/2012_2_basics_korean.htm
@@ -1538,7 +1538,7 @@
 <td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-101A&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이유선&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1551,7 +1551,7 @@
 <td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-101A&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이유선&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1564,7 +1564,7 @@
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-101A&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이유선&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1577,7 +1577,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-101A&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이유선&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1590,7 +1590,7 @@
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-101A&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이유선&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1603,7 +1603,7 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-101A&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이유선&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1616,7 +1616,7 @@
 <td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-101A&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이유선&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1629,7 +1629,7 @@
 <td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-101A&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이유선&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1642,7 +1642,7 @@
 <td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-102&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상원&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1655,7 +1655,7 @@
 <td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-102&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상원&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1668,7 +1668,7 @@
 <td class="pstyle2">화&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-304&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상원&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1681,7 +1681,7 @@
 <td class="pstyle2">목&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-304&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상원&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1694,7 +1694,7 @@
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-102&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">서선정&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1707,7 +1707,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-102&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">서선정&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1720,7 +1720,7 @@
 <td class="pstyle2">수&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-101B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이범준&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1733,7 +1733,7 @@
 <td class="pstyle2">금&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-405&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상원&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1746,7 +1746,7 @@
 <td class="pstyle2">월&nbsp;2,3,4&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-101C&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">윤상길&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1759,7 +1759,7 @@
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-403&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박현희&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1772,7 +1772,7 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-403&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박현희&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1785,7 +1785,7 @@
 <td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-403&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박현희&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1798,7 +1798,7 @@
 <td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-403&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박현희&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1811,7 +1811,7 @@
 <td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-112B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김혜진&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1824,7 +1824,7 @@
 <td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-112B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김혜진&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1837,7 +1837,7 @@
 <td class="pstyle2">화&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-112B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김혜진&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1850,7 +1850,7 @@
 <td class="pstyle2">목&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-112B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김혜진&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1863,7 +1863,7 @@
 <td class="pstyle2">금&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-102&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박현희&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2435,7 +2435,7 @@
 <td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김종영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2448,7 +2448,7 @@
 <td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김종영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2461,7 +2461,7 @@
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김종영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2474,7 +2474,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김종영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2487,7 +2487,7 @@
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김종영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2500,7 +2500,7 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김종영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2513,7 +2513,7 @@
 <td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김종영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2526,7 +2526,7 @@
 <td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김종영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2539,7 +2539,7 @@
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상원&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2552,7 +2552,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상원&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2565,7 +2565,7 @@
 <td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">홍은영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2578,7 +2578,7 @@
 <td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">홍은영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2591,7 +2591,7 @@
 <td class="pstyle2">화&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">홍은영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2604,7 +2604,7 @@
 <td class="pstyle2">목&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">홍은영&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2617,7 +2617,7 @@
 <td class="pstyle2">화&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-405&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">황은미&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2630,7 +2630,7 @@
 <td class="pstyle2">화&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-405&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김지은&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2643,7 +2643,7 @@
 <td class="pstyle2">수&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-102&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">백미숙&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2656,7 +2656,7 @@
 <td class="pstyle2">목&nbsp;5,6,7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-405&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김용신&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2669,7 +2669,7 @@
 <td class="pstyle2">목&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-405&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">유정아&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2682,7 +2682,7 @@
 <td class="pstyle2">금&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박재홍&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2695,7 +2695,7 @@
 <td class="pstyle2">수&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-405&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">백미숙&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2734,7 +2734,7 @@
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-405&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박현희&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2747,7 +2747,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-405&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박현희&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2760,7 +2760,7 @@
 <td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김재호&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2773,7 +2773,7 @@
 <td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김재호&nbsp;</td>
 <td class="pstyle2">25&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
