--- a/data/htm/2012_2_basics_science.htm
+++ b/data/htm/2012_2_basics_science.htm
@@ -290,7 +290,7 @@
 <td class="pstyle2">월&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">009-112&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최영기&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -303,7 +303,7 @@
 <td class="pstyle2">수&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">009-112&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최영기&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -316,7 +316,7 @@
 <td class="pstyle2">금&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">009-112&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최영기&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -329,7 +329,7 @@
 <td class="pstyle2">월&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-203&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">문명인&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -342,7 +342,7 @@
 <td class="pstyle2">수&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-203&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">문명인&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -355,7 +355,7 @@
 <td class="pstyle2">금&nbsp;3,4,3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">014-101B&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">문명인&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -394,7 +394,7 @@
 <td class="pstyle2">월&nbsp;7,8,7,8,2&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">020-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김주명&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -407,7 +407,7 @@
 <td class="pstyle2">수&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-112&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김주명&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -446,7 +446,7 @@
 <td class="pstyle2">월&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">018-601&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김일형&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -459,7 +459,7 @@
 <td class="pstyle2">수&nbsp;2,7,8,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">018-601&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김일형&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -498,7 +498,7 @@
 <td class="pstyle2">월&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">025-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">허석&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -511,7 +511,7 @@
 <td class="pstyle2">수&nbsp;3,7,8,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">025-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">허석&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -719,7 +719,7 @@
 <td class="pstyle2">월&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최소남&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -732,7 +732,7 @@
 <td class="pstyle2">수&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최소남&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -745,7 +745,7 @@
 <td class="pstyle2">금&nbsp;5,6,5,6&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">020-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최소남&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -758,7 +758,7 @@
 <td class="pstyle2">월&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-112&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김경희&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -771,7 +771,7 @@
 <td class="pstyle2">수&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-112&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김경희&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -784,7 +784,7 @@
 <td class="pstyle2">금&nbsp;7,8,7,8&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">024-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김경희&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -797,7 +797,7 @@
 <td class="pstyle2">월&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">함세헌&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -810,7 +810,7 @@
 <td class="pstyle2">수&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">함세헌&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -823,7 +823,7 @@
 <td class="pstyle2">금&nbsp;5,6,5,6&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">024-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">함세헌&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -836,7 +836,7 @@
 <td class="pstyle2">월&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">018-601&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">함지영&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -849,7 +849,7 @@
 <td class="pstyle2">수&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">018-601&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">함지영&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -862,7 +862,7 @@
 <td class="pstyle2">금&nbsp;7,8,7,8&nbsp;</td>
 <td class="pstyle2">실험반2&nbsp;</td>
 <td class="pstyle2">024-207&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">함지영&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1070,7 +1070,7 @@
 <td class="pstyle2">월&nbsp;5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L302&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최양선&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1083,7 +1083,7 @@
 <td class="pstyle2">수&nbsp;5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L302&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최양선&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1096,7 +1096,7 @@
 <td class="pstyle2">금&nbsp;5,6,5,6&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L309&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최양선&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1304,7 +1304,7 @@
 <td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-403&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박광순&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1317,7 +1317,7 @@
 <td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-403&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박광순&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1330,7 +1330,7 @@
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">025-109&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박광순&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1343,7 +1343,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">025-109&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박광순&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1382,7 +1382,7 @@
 <td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-302&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">문명인&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1395,7 +1395,7 @@
 <td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-302&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">문명인&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1408,7 +1408,7 @@
 <td class="pstyle2">화&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-304&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이창우&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1421,7 +1421,7 @@
 <td class="pstyle2">목&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-304&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이창우&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1460,7 +1460,7 @@
 <td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L311&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">함지영&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1473,7 +1473,7 @@
 <td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">500-L311&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">함지영&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2539,7 +2539,7 @@
 <td class="pstyle2">월&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-101&nbsp;</td>
-<td class="pstyle2">이명수&nbsp;</td>
+<td class="pstyle2">박종상&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2552,7 +2552,7 @@
 <td class="pstyle2">수&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-101&nbsp;</td>
-<td class="pstyle2">이명수&nbsp;</td>
+<td class="pstyle2">박종상&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2565,7 +2565,7 @@
 <td class="pstyle2">금&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-101&nbsp;</td>
-<td class="pstyle2">이명수&nbsp;</td>
+<td class="pstyle2">박종상&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4226,7 +4226,7 @@
 <td class="pstyle2">고급물리학 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">056-321&nbsp;</td>
 <td class="pstyle2">박영우&nbsp;</td>
@@ -4239,38 +4239,12 @@
 <td class="pstyle2">고급물리학 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">056-321&nbsp;</td>
 <td class="pstyle2">박영우&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.152&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">인문사회계를 위한 물리학&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L301&nbsp;</td>
-<td class="pstyle2">박제근&nbsp;</td>
-<td class="pstyle2">60&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.152&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">인문사회계를 위한 물리학&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L301&nbsp;</td>
-<td class="pstyle2">박제근&nbsp;</td>
-<td class="pstyle2">60&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.156&nbsp;</td>
@@ -4580,7 +4554,7 @@
 <td class="pstyle2">금&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">백대현&nbsp;</td>
+<td class="pstyle2">조형택&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4593,7 +4567,7 @@
 <td class="pstyle2">월&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">조형택&nbsp;</td>
+<td class="pstyle2">백대현&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4606,7 +4580,7 @@
 <td class="pstyle2">월&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">최석우&nbsp;</td>
+<td class="pstyle2">임영운&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4619,7 +4593,7 @@
 <td class="pstyle2">화&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">임영운&nbsp;</td>
+<td class="pstyle2">최석우&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4671,7 +4645,7 @@
 <td class="pstyle2">목&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">홍승환&nbsp;</td>
+<td class="pstyle2">이건수&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4684,7 +4658,7 @@
 <td class="pstyle2">목&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
-<td class="pstyle2">이건수&nbsp;</td>
+<td class="pstyle2">홍승환&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4707,9 +4681,9 @@
 <td class="pstyle2">지구과학실험&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">금&nbsp;7,8&nbsp;</td>
+<td class="pstyle2">금&nbsp;5,6&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
-<td class="pstyle2">43-1-301&nbsp;</td>
+<td class="pstyle2">10-1-308&nbsp;</td>
 <td class="pstyle2">안유민&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
