--- a/data/htm/2012_2_normal_art.htm
+++ b/data/htm/2012_2_normal_art.htm
@@ -1223,9 +1223,9 @@
 <td class="pstyle2">소그룹 고전원전읽기 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;7,8&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-214&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">윤원철&nbsp;</td>
 <td class="pstyle2">5&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
