--- a/data/htm/2012_2_normal_exercise.htm
+++ b/data/htm/2012_2_normal_exercise.htm
@@ -66,7 +66,7 @@
 <td class="pstyle2">축구&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">월&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">금&nbsp;3,4&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
@@ -586,7 +586,7 @@
 <td class="pstyle2">체력단련&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">수&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">화&nbsp;7,8&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
@@ -612,7 +612,7 @@
 <td class="pstyle2">체력단련&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-0-2&nbsp;</td>
-<td class="pstyle2">목&nbsp;1,2&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">양종현&nbsp;</td>
