--- a/data/htm/2012_2_normal_nature.htm
+++ b/data/htm/2012_2_normal_nature.htm
@@ -138,6 +138,32 @@
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">006.025&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">과학기술과 사회&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-209&nbsp;</td>
+<td class="pstyle2">하대청&nbsp;</td>
+<td class="pstyle2">60&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">006.025&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">과학기술과 사회&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-209&nbsp;</td>
+<td class="pstyle2">하대청&nbsp;</td>
+<td class="pstyle2">60&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
 <td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">006.027&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
