--- a/data/htm/2012_2_normal_special.htm
+++ b/data/htm/2012_2_normal_special.htm
@@ -979,7 +979,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">안성훈&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -992,7 +992,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">Otto van Koert&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1005,7 +1005,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최변각&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1018,7 +1018,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최진영&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1031,7 +1031,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">오명석&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1044,7 +1044,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박주용&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1057,7 +1057,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">안덕근&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1070,7 +1070,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">홍성욱&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1083,7 +1083,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">우용제&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1096,7 +1096,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">전재성&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1109,7 +1109,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">홍국선&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1122,7 +1122,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김선&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
 <td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
@@ -1135,7 +1135,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">강원택&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1148,7 +1148,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">최종고&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1161,7 +1161,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이준환&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1174,7 +1174,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">조동성&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1187,9 +1187,9 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정상조&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.032&nbsp;</td>
@@ -1200,7 +1200,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김종남&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1213,7 +1213,7 @@
 <td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박현희&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
