--- a/data/htm/2012_2_normal_exercise.htm
+++ b/data/htm/2012_2_normal_exercise.htm
@@ -396,7 +396,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">박일혁&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.030&nbsp;</td>
@@ -409,7 +409,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김민주&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.030&nbsp;</td>
@@ -422,7 +422,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김민주&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">008.031&nbsp;</td>
@@ -435,7 +435,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">권현진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.032&nbsp;</td>
@@ -448,7 +448,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">권현진&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.032&nbsp;</td>
@@ -461,7 +461,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">조은효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.032&nbsp;</td>
@@ -474,7 +474,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">008.033&nbsp;</td>
@@ -487,7 +487,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김종호&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">008.034&nbsp;</td>
@@ -500,7 +500,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김한범&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.039&nbsp;</td>
@@ -565,7 +565,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">김철웅&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.040&nbsp;</td>
@@ -890,7 +890,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">노신철&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.049&nbsp;</td>
@@ -903,7 +903,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">노신철&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.049&nbsp;</td>
@@ -1449,7 +1449,7 @@
 <td class="pstyle2">   -    &nbsp;</td>
 <td class="pstyle2">임강일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">008.083&nbsp;</td>
